--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -16,15 +16,17 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>PlexAgentAttributionText</key>
+	<string>
+		    &lt;a href=&quot;http://thetvdb.com&quot;&gt;TheTVDB.com&lt;/a&gt; is a community driven database of television shows. &lt;br/&gt;
+							It is our aim to be the most complete and accurate source of&lt;br/&gt;
+							information on TV series from many languages and countries.
+		  </string>
 	<key>PlexFrameworkVersion</key>
 	<string>2</string>
+	<key>PlexPluginClass</key>
+	<string>Agent</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
-	<key>PlexAgentAttributionText</key>
-  <string>
-    &lt;a href=&quot;http://thetvdb.com&quot;&gt;TheTVDB.com&lt;/a&gt; is a community driven database of television shows. &lt;br/&gt;
-					It is our aim to be the most complete and accurate source of&lt;br/&gt;
-					information on TV series from many languages and countries.
-  </string>
 </dict>
 </plist>
